<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_background"  >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:background="@drawable/textview_heading"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:padding="8dp"
         android:ems="6"
        android:text="@string/Body"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/post_body"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
         android:background="@drawable/lay_textview_shape"
        android:layout_weight="0.56"
        android:ems="10"
        android:padding="8dp"
        android:hint="@string/post_body"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="245dp"
        android:layout_marginBottom="5dp"
         android:background="@drawable/lay_textview_shape"
        android:text="@string/submit" />

</LinearLayout>